added assets folder, final touches to pages for submitting

--- a/contact.html
+++ b/contact.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Contact</title>
-    <link rel="stylesheet" href="css/navbar.css">
-    <link rel="stylesheet" href="css/contact.css">
+    <link rel="stylesheet" href="assets/css/navbar.css">
+    <link rel="stylesheet" href="assets/css/contact.css">
     </head>
 <body>
    <div class="header">
@@ -15,11 +15,11 @@
             </a>
             <div class="dropdown buttons" onclick="location.href ='portfolio.html'">Portfolio
                 <div class="dropdown-content" id="myDropdown">
-                  <a href="#">Chess</a>
-                  <a href="#">Billiards</a>
-                  <a href="#">Word Game</a>
-                  <a href="#">Poker</a>
-                  <a href="#">RPG</a>
+                    <a href="#">Chess</a>
+                    <a href="#">Billiards</a>
+                    <a href="#">Word Game</a>
+                    <a href="#">Poker</a>
+                    <a href="#">RPG</a>
                 </div>
             </div>
             <a href="index.html">
