--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>About Me</title>
-    <link rel="stylesheet" href="css/navbar.css">
-    <link rel="stylesheet" href="css/body-about.css">
+    <link rel="stylesheet" href="assets/css/navbar.css">
+    <link rel="stylesheet" href="assets/css/body-about.css">
     </head> 
 <body>
    <div class="header">
@@ -21,7 +21,6 @@
                 </div>
             </div>
             <a href="index.html" class="buttons">About</a>
-
         </div>
     </div>
     <div class="body" id="body">
@@ -30,7 +29,7 @@
                 <div class="aboutme">About Me</div>
             </div>
             <div class="body-main">
-                <img class="selfie" src="images/profile-placeholder.png" alt="Not Loaded">
+                <img class="selfie" src="assets/images/profile-placeholder.png" alt="Not Loaded">
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Incidunt maiores earum nesciunt explicabo cumque ullam quaerat. Provident, ad accusamus illum, ex ab animi quasi dolor et voluptatem molestias, neque eum?</p>
             </div>
         </div>
