--- a/portfolio.html
+++ b/portfolio.html
@@ -3,16 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Portfolio</title>
-    <link rel="stylesheet" href="css/navbar.css">
-    <link rel="stylesheet" href="css/portfolio.css">
+    <link rel="stylesheet" href="assets/css/navbar.css">
+    <link rel="stylesheet" href="assets/css/portfolio.css">
     </head>
 <body>
-   <div class="header">
+    <div class="header">
         <div class="toolbar">
             <div class="name">Joel Fecke</div>
-            <a href="contact.html">
-                <div class="buttons">Contact</div>
-            </a>
+            <a href="contact.html" class="buttons">Contact</a>
             <div class="dropdown buttons" onclick="location.href ='portfolio.html'">Portfolio
                 <div class="dropdown-content" id="myDropdown">
                     <a href="#">Chess</a>
@@ -22,9 +20,7 @@
                     <a href="#">RPG</a>
                 </div>
             </div>
-            <a href="index.html">
-                <div class="buttons">About</div>
-            </a>
+            <a href="index.html" class="buttons">About</a>
         </div>
     </div>
     <div class="body">
@@ -34,23 +30,23 @@
             </div>
             <div class="body-main">
                 <div class="box">
-                    <img class="example" src="images/chess.jpg" alt="Not Loaded">
+                    <img class="example" src="assets/images/chess.jpg" alt="Not Loaded">
                     <div class="label">Chess</div>
                 </div>
                 <div class="box">
-                    <img class="example" src="images/pool.jpg" alt="Not Loaded">
+                    <img class="example" src="assets/images/pool.jpg" alt="Not Loaded">
                     <div class="label">Billiards</div>
                 </div>
                 <div class="box">
-                    <img class="example" src="images/word.jpg" alt="Not Loaded">
+                    <img class="example" src="assets/images/word.jpg" alt="Not Loaded">
                     <div class="label">Word Game</div>
                 </div>
                 <div class="box">
-                    <img class="example" src="images/poker.jpg" alt="Not Loaded">
+                    <img class="example" src="assets/images/poker.jpg" alt="Not Loaded">
                     <div class="label">Poker</div>
                 </div>
                 <div class="box">
-                    <img class="example" src="images/rpggame.jpg" alt="Not Loaded">
+                    <img class="example" src="assets/images/rpggame.jpg" alt="Not Loaded">
                     <div class="label">RPG</div>
                 </div>
                 
